---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 08.12.2024
  Compatibility:
    - Recipe and required technology is now compatible with more mods (#4 by branan).
    - [PyIndustry] Valve recipe and required technology is now based on deprecated Py valves instead of pump (#4 branan).
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 28.11.2024
  Compatibility:
    - Added compatibility with Even Pickier Dollies.
  Bugfixes:
    - Fixed rare crash when quick-changing configuration using the key-bind.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 22.11.2024
  Bugfixes:
    - Fixed crash when configurable valve is cloned.
    - Fixed that flipping valves did not update internal entities.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 03.11.2024
  Features:
    - Added easy configuring of valves using keyboard shortcuts. Keys are configurable.
      - Ctrl+R switches between overflow, top-up and one-way.
      - Numpad +/- changes the threshold in 10% increments.
  Changes:
    - Removed most incorrect fluidbox arrows. Waiting on API changes.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 02.11.2024
  Compatibility:
    - Add migration for Pyanodon's valves from Factorio 1.1.
  Bugfixes:
    - Fixed valve forcing the max pipeline extent to the default 320.
    - Fixed blueprinted valves always defaulting back to overflow valve.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 01.11.2024
  Features:
    - Added Configurable valve.