@@ -26,3 +26,9 @@ configurable-valves-minus=Decrement valve threshold
 configurable-valves-switch=Allows cycling through the three main valve modes: overflow, top-up and one-way.
 configurable-valves-plus=Adjusts the threshold used for overflow or topup valves.
 configurable-valves-minus=Adjusts the threshold used for overflow or topup valves.
+
+[mod-setting-name]
+configurable-valve-pump-speed=Valve pumping speed
+
+[mod-setting-description]
+configurable-valve-pump-speed=The amount of fluid the pump every second when the valve is open.
