@@ -1,0 +1,10 @@
+data:extend({
+    {
+        type = "int-setting",
+        name = "configurable-valve-pump-speed",
+        setting_type = "startup",
+        minimum_value = 60,
+        maximum_value = 24000,
+        default_value = 1200,
+    },
+})
